# YAVL

./: .gitignore  CMakeLists.txt  COPYING
.github/workflows/: cmake.yml
docs/: Readme.md
include/YAVL/: _macro.h  vec.h.in
src/: namespace.h  vec.c
